sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:10: error: illegal start of statement
		else if(plusPetit(i,i-1))
                ^AlgGnomeSort:15: error: ';' expected but 'else' found.
		else if(plusPetit(i-1,i))
                ^